# cocoman

./: README.md  pyproject.toml  setup.py
cocoman/: __init__.py  __main__.py  cli.py  runbook.py  tbenv.py
cocoregman/: __init__.py  __main__.py  cli.py  datatypes.py  runbook.py  tbenv.py
cocoregman/cli/: commands.py
examples/: .cocoman
src/cocoregman/: __init__.py  __main__.py  errors.py
src/cocoregman/cli/: __init__.py  argp.py  commands.py
src/cocoregman/core/: __init__.py  env.py  orchestrator.py  runbook.py  schema.py  validation.py
