[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=76.0", "wheel>=0.45"]

[project]
name = "cocoregman"
description = "Regression runner for cocotb-based verification workflows"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [{name = "amutioalex"}]
maintainers = [{name = "amutioalex"}]

requires-python = ">=3.9"
dependencies = ["cocotb", "cerberus", "pyyaml", "rich"]

dynamic = ["version"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: cocotb",
]
keywords = ["testbench", "verification", "cocotb"]

[project.urls]
Homepage = "https://www.github.com/amutioalex/cocoman"
Repository = "https://www.github.com/amutioalex/cocoman.git"

[project.scripts]
cmn = "cocoregman.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
